fix: card alignment, add space between image and heading, fix 429 retry, add allowedCommonJsDependencies

--- a/src/app/news/news-details/news-details.component.scss
+++ b/src/app/news/news-details/news-details.component.scss
@@ -1,6 +1,10 @@
 .card {
-  max-width: 35rem;
+  max-width: 20rem;
   padding: 2rem;
+}
+
+mat-card-content h1 {
+  margin-top: 12px;
 }
 
 .fallback-image {
